fixed minor spacing issues

--- a/client/style.less
+++ b/client/style.less
@@ -36,7 +36,7 @@ h1{
 #currdate {
   width:400px;
   padding-top:10px;
-  padding-left:5px;
+  padding-left:10px;
   font-size: 1.5em;
   text-align: center;
 }
@@ -58,15 +58,11 @@ h1{
 #showYesterday {
   width:400px;
   font-size:1em;
-  margin-left: 8px;
-  // text-align: center;
 }
 
 #yesterdayTemp {
   width:400px;
   font-size:1em;
-  margin-left:12px;
-  // text-align: center;
 }
 
 .info.day {
@@ -84,6 +80,6 @@ h1{
 
 .info {
   padding-top: 12px;
-  padding-right: 15px;
+  padding-right: 10px;
   text-align: center;
 }
